--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "carbon-components": "^10.3.0",
     "carbon-components-react": "^7.3.0",
     "carbon-icons": "^7.0.7",
