--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,14 +23,16 @@ jobs:
 
     - name: Get dependencies
       run: |
-        go mod download
+        go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
 
     - name: Build
-      run: go build -v .
+      env:
+        GOPROXY: "https://proxy.golang.org"
+      run: go build .
 
     - name: Test
       run: go test -v .
