--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "carbon-components": "^10.3.0",
     "carbon-components-react": "^7.3.0",
     "carbon-icons": "^7.0.7",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
