--- a/resources/mozart-sample.yaml
+++ b/resources/mozart-sample.yaml
@@ -1,3 +1,22 @@
 values:
   value1: hello
   value2: world
+
+# Optional configuration params
+# ------------------------------
+# Exec source
+
+# (file_ext: source)
+
+# Examples:
+# exec_source:
+  # py: /usr/bin/python3
+  # sh: /bin/bash
+# ------------------------------
+# Log Path - custom directory to store log files
+# log_path: my_dir
+# ------------------------------
+# Delims - change default delimiters (default - "{{", "}}")
+
+# Examples:
+# delims: ["[[", "]]"]
